[tool.poetry]
name = "vision-test"
version = "0.1.0"
description = ""
authors = ["Daniel Smolentsev <kuwala@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.8.1.78"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
